# libnrf24

./: .gitignore  .travis.yml  EXAMPLES  Makefile  Makefile.utests  README.md  meson.build  meson_options.txt
include/: RF24.h  meson.build  nRF24L01.h  rf24_cmds.h  rf24_ops.h  rf24_std.h  rf24dbg.h  rf24delay.h  rf24err.h  rf24log.h  rf24misc.h
src/: meson.build  rf24-sweep.c  rf24.c  rf24_cmds.c  rf24_mb_cmds.c  rf24_ops.c  rf24_sb_cmds.c
tests/: basic_tests.cpp  cmd_mock.cpp  cmd_tests.cpp  core_tests.cpp  meson.build  mock.cpp  mock_rf24.h  mspi_mock.cpp  spi_mock.cpp  spi_tests.cpp  stub_nrf24.h  stubs.cpp  uc_tests.cpp
tests/include/: cmd_mock_rf24.h  mock_rf24.h  spi_mock_rf24.h
